# riplib

./: .gitignore  setup.cfg  setup.py
.github/workflows/: release.yml
examples/: basic_usage.py
tests/: test_riplib.py
