[metadata]
name = riplib
version = 0.1.0
description = A library for all your bursting, souping, and farting needs.
author = hireri
author_email = hi@aveline.fish
url = https://github.com/hireri/riplib
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.package_data]
riplib = 
    *.pyi

[tool:pytest]
testpaths = tests
addopts = --cov=riplib --cov-report=term-missing